<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/input_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <ImageView
                android:contentDescription="@string/trip_name"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/name"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/trip_name"
                android:textColor="@color/text_white"
                android:paddingStart="5dp"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_name"
                android:textColor="@color/text_white"
                android:padding="5dp"
                android:background="@drawable/input_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <ImageView
                android:contentDescription="@string/trip_location"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/location"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/trip_location"
                android:paddingStart="5dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_white" />
            <EditText
                android:id="@+id/trip_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_location"
                android:textColor="@color/text_white"
                android:padding="5dp"
                android:background="@drawable/input_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <ImageView
                android:contentDescription="@string/trip_type"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/type"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/trip_type"
                android:paddingStart="5dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_white" />
            <EditText
                android:id="@+id/trip_type"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/trip_type"
                android:textColor="@color/text_white"
                android:padding="5dp"
                android:background="@drawable/input_border"/>
            <Button
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:text="@string/button_search_location"
                android:layout_marginLeft="5dp"
                android:background="@drawable/small_search_button"
                android:onClick="searchForLocation"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <ImageView
                android:contentDescription="@string/trip_friends"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/friends"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:gravity="center_vertical"
                android:text="@string/trip_friends"
                android:textColor="@color/text_white"/>
            <TextView
                android:id="@+id/trip_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/text_white"
                android:hint="@string/select_frinds"
                android:onClick="selectFromContact"
                android:singleLine="false"
                android:padding="5dp"
                android:background="@drawable/input_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/time"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/trip_start_time"
                android:paddingStart="5dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_white"/>
            <TextView
                android:id="@+id/trip_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="@string/select_start_time"
                android:textColor="@color/text_white"
                android:padding="5dp"
                android:background="@drawable/input_border"
                android:onClick="selectTime"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/end_time"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/trip_end_time"
                android:paddingStart="5dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_white"/>
            <TextView
                android:id="@+id/trip_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="@string/select_end_time"
                android:textColor="@color/text_white"
                android:padding="5dp"
                android:background="@drawable/input_border"
                android:onClick="selectTime"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <ImageView
                android:contentDescription="@string/trip_description"
                android:layout_width="18dp"
                android:layout_height="40dp"
                android:src="@drawable/description"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/trip_description"
                android:textColor="@color/text_white"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:gravity="center_vertical"
                />
            <EditText
                android:id="@+id/trip_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/trip_description"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textColor="@color/text_white"
                android:padding="5dp"
                android:background="@drawable/input_border"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:gravity="center"
                android:id="@+id/submit_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/finish_create_button"
                android:background="@drawable/submit_button"
                />

            <Button
                android:gravity="center"
                android:id="@+id/cancel_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="cancelTrip"
                android:text="@string/cancel_create_button"
                android:background="@drawable/cancel_button"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
