<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/create_background">

    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <LinearLayout
            android:id="@+id/input_form"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:layout_gravity="left">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/name_black"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/trip_name" />
                <TextView
                    android:id="@+id/view_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_margin="@dimen/activity_vertical_margin">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/location_black"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/trip_location" />
                <TextView
                    android:id="@+id/view_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_margin="@dimen/activity_vertical_margin">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/friends_black" />
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:text="@string/trip_friends"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/view_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/time_black"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_start_time" />
                <TextView
                    android:id="@+id/view_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/end_time_black"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_end_time" />
                <TextView
                    android:id="@+id/view_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_margin="@dimen/activity_vertical_margin">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/description_black"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/trip_description" />
                <TextView
                    android:id="@+id/view_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/status_black"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_status" />
                <TextView
                    android:id="@+id/view_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center">
                <Button
                    android:id="@+id/arrive_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/text_white"
                    android:text="@string/arrive"
                    android:background="@drawable/active_trip_button"/>
                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Back_button"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/cancel_button"
                    android:onClick="cancelTrip"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>