<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    app:cardCornerRadius="8dp"
    android:clickable="true"
    app:cardElevation="8dp"
    android:layout_margin="8dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_gravity="start"
            android:gravity="start">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/name_black"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/card_trip_name"
                android:textSize="50sp"
                android:text="name"
                android:maxWidth="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">
                <Button
                    android:id="@+id/active_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/text_white"
                    android:padding="10dp"
                    android:text="@string/activate_trip"
                    android:background="@drawable/active_trip_button"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/location_black"/>
                <TextView
                    android:id="@+id/card_trip_location"
                    android:textSize="20sp"
                    android:text="@string/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="150dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/time_black"/>
                    <TextView
                        android:id="@+id/card_trip_start_time"
                        android:textSize="20sp"
                        android:text="@string/start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/end_time_black"/>
                    <TextView
                        android:id="@+id/card_trip_end_time"
                        android:textSize="20sp"
                        android:text="@string/end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>  